syntax = "proto3";

package location;

service LocationsService {
    rpc GetLocation(LocationId) returns (Location);
    rpc GetAllLocations(Empty) returns (LocationList);
    rpc AddLocation(CreateLocationDto) returns (Location);
    rpc SearchLocation(Keyword) returns (LocationList);
}

message Empty{}

message Keyword {
    string keyword=1;
}

message Location {
    int32 id=1;
    string name=2;
    string description=3;
    string type=4;
    string address=5;
    string district=6;
    string subDistrict=7;
    string postCode=8;
    string province=9;
    string latitude=10;
    string longitude=11;
    string imgURL=12;
    int32 closestStation=13;
}

message CreateLocationDto {
    string name=1;
    string description=2;
    string type=3;
    string address=4;
    string district=5;
    string subDistrict=6;
    string postCode=7;
    string province=8;
    string latitude=9;
    string longitude=10;
    string imgURL=11;
    int32 closestStation=12;
}

message LocationList{
    repeated Location data=1;
}

message LocationId{
    int32 id=1;
}